--- a/lib/less/style.less
+++ b/lib/less/style.less
@@ -6,10 +6,14 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+.container.main{
+	padding-bottom:4em;
+}
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  padding-top:2em;
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
