--- a/partials/node.html
+++ b/partials/node.html
@@ -1,1 +1,8 @@
-I am node
+      <div ng-app="myApp" ng-controller="nodeCtrl"> 
+      <a href="/#/"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span> Back to main list
+</a><h1>{{title}}</h1>
+      <hr>
+      <div ng-bind-html="body">
+      	{{body}}
+      	</div>
+	</div>
