--- a/lib/less/style.less
+++ b/lib/less/style.less
@@ -1,4 +1,7 @@
-html {
+/**
+ * Structure
+ */
+ html {
   position: relative;
   min-height: 100%;
 }
@@ -19,3 +22,16 @@ body {
   background-color: #f5f5f5;
 }
  
+ /**
+  * Components
+  */
+  .view-mode-full{
+    .categories{
+      
+      .category{
+        display:inline-block;
+        float: left;
+        margin-right: 5px;
+        }
+      }
+  }
