--- a/partials/allnodes.html
+++ b/partials/allnodes.html
@@ -1,15 +1,22 @@
 
 <div ng-switch on="loaded">
     <div ng-switch-when="false">
-     Loading 250 nodes... <img src="http://www.ajaxload.info/images/exemples/21.gif">
+     Loading 250 nodes... <img src="./lib/images/21.gif">
 
     </div>
     <div ng-switch-default>
 			<div class="form-group"><input type="text" id="textFilter" ng-model="textFilter" class="form-control" placeholder="Type to filter... eg Neo" autofocus>
 			</div>
 			<div class="row">
+			<label><input type="checkbox" name="mulder" value="mulder">Mulder</label>
+			<label><input type="checkbox" name="scully" value="scully">Scully</label>
+		
 				<div ng-repeat="node in allNodes |  filter:textFilter" class="col-sm-4">
 				{{ node.title }} <a href="#/node/{{ node.nid }}">link</a>
+					 <div ng-repeat="category in node.category">
+						{{category.name}}
+					</div>
+				
 				</div> 
 			</div>
     </div>
