--- a/partials/node.html
+++ b/partials/node.html
@@ -1,4 +1,4 @@
-<div ng-app="myApp" ng-controller="nodeCtrl" class="view-mode-full"> 
+<div ng-app="myApp" class="view-mode-full"> 
   <a href="/#/"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>  Back to main list</a>
   <h1>{{title}}</h1>
   <hr>
